Doc/force-app/main/default/objects/SFDC_MDF__c/SFDC_MDF__c.object-meta.xml
<CustomObject>
    <description>Details of the request Including: partner account, marketing activity, proposed activity date, requested amount, approved amount, and percentage approved.</description>
    <label>Fund Request</label>
    <nameField>
        <displayFormat>FR-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>